# oxurack

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
assets/ai/: RUST-CODE-AUDIT.md
crates/oxurack-core/: Cargo.toml  README.md
crates/oxurack-core/src/: bridge.rs  cable.rs  error.rs  event.rs  lib.rs  module.rs  parameter.rs  patch.rs  port.rs  rng.rs  scale.rs  tick.rs  value.rs
crates/oxurack-core/tests/: integration_full_cycle.rs
crates/oxurack-midi/: Cargo.toml
crates/oxurack-midi/src/: lib.rs  message.rs  wire.rs
crates/oxurack-rt/: Cargo.toml  README.md
crates/oxurack-rt/src/: error.rs  lib.rs  messages.rs  midi_io.rs  priority.rs  queues.rs  thread.rs  timing.rs
crates/oxurack-rt/src/clock/: master.rs  mod.rs  passthrough.rs  slave.rs
crates/turingmachine/: Cargo.toml  README.md
crates/turingmachine/src/: clock.rs  engine.rs  error.rs  length.rs  lib.rs  midi_io.rs  outputs.rs  quantizer.rs  shift_register.rs  write_knob.rs
docs/design/: index.md
docs/design/01-draft/: 0001-turing-machine-to-midi-module-design-doc.md  0002-oxurack-system-architecture.md  0003-initial-module-catalog-and-build-order.md  0004-oxurack-rack-module-infrastructure.md  0005-oxurack-rt-the-real-time-thread.md  0005-oxurack-system-architecture.md  0007-oxurack-core-ecs-world-values-ports-and-cables.md  0008-oxurack-module-infrastructure-authoring-modules-on-bevy.md  0009-module-catalog-and-build-order-v2.md
docs/design/06-final/: 0001-turing-machine-to-midi-module-design-doc.md  0006-oxurack-rt-the-real-time-thread.md
docs/design/10-superseded/: 0002-oxurack-system-architecture.md  0003-initial-module-catalog-and-build-order.md  0004-oxurack-rack-module-infrastructure.md
docs/dev/: 0001-project-plan-oxurack-rt-crate-implementation.md  0002-project-plan-oxurack-core-crate-implementation.md
