[package]
name        = "oxurack-core"
version     = "0.1.0"
edition     = "2024"
description = "ECS world, values, ports, and cables for oxurack."
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/oxur/oxurack"

[features]
default = []
rt-bridge = ["dep:oxurack-rt", "dep:rtrb"]

[dependencies]
bevy_ecs     = { version = "0.18", default-features = false, features = ["std"] }
bevy_app     = { version = "0.18", default-features = false, features = ["std"] }
smallvec     = { version = "1", features = ["serde"] }
serde        = { version = "1", features = ["derive"] }
ron          = "0.12"
thiserror    = "2"
ahash        = "0.8"
rand         = { version = "0.10", default-features = false }
oxurack-midi = { path = "../oxurack-midi" }
oxurack-rt   = { path = "../oxurack-rt", optional = true }
rtrb         = { version = "0.3", optional = true }

[dev-dependencies]
pretty_assertions = "1"
